# stacy

./: .gitignore  .worktreeinclude  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-automerge.yml  docs.yml  homebrew.yml  release.yml  smoke-test.yml
Formula/: stacy.rb
benches/: benchmarks.rs
docs/: book.toml
docs/src/: SUMMARY.md  faq.md  installation.md  introduction.md  quick-start.md  troubleshooting.md
examples/: test_binary_detection.rs
examples/sample-project/: .gitignore  Makefile  README.md  analysis.do  clean_data.do  error_example.do  main.do  stacy.toml
schema/: commands.toml
src/: lib.rs  main.rs  update_check.rs
src/cache/: detect.rs  hash.rs  mod.rs
src/cli/: add.rs  bench.rs  cache.rs  deps.rs  doctor.rs  env.rs  explain.rs  format.rs  init.rs  install.rs  list.rs  lock.rs  mod.rs  outdated.rs  output_format.rs  output_types.rs  remove.rs  run.rs  task.rs  (+3 more)
stata/: _stacy_check_version.ado  _stacy_compat.ado  _stacy_compat_version.ado  _stacy_exec.ado  _stacy_find_binary.ado  _stacy_semver_cmp.ado  stacy.ado  stacy.pkg  stacy.sthlp  stacy_add.ado  stacy_add.sthlp  stacy_bench.ado  stacy_bench.sthlp  stacy_cache_clean.ado  stacy_cache_clean.sthlp  stacy_cache_info.ado  stacy_cache_info.sthlp  stacy_deps.ado  stacy_deps.sthlp  stacy_doctor.ado  stacy_doctor.sthlp  stacy_env.ado  stacy_env.sthlp  stacy_explain.ado  stacy_explain.sthlp  stacy_init.ado  stacy_init.sthlp  stacy_install.ado  stacy_install.sthlp  stacy_list.ado  stacy_list.sthlp  stacy_lock.ado  stacy_lock.sthlp  stacy_outdated.ado  stacy_outdated.sthlp  stacy_remove.ado  stacy_remove.sthlp  stacy_run.ado  stacy_run.sthlp  stacy_setup.ado  (+8 more)
tests/: check_tier1.sh  edge_cases_test.rs  executor_test.rs  extract_codes.sh  false_positive_test.rs  generate_test_suite.sh  integration_cli.rs  measure_accuracy.sh  package_command_failures.rs  run_all_tests.sh  run_tier1_tests.sh  test_config_unknown_keys.rs  test_dep_scan_self_provided.rs  test_env_package_status.rs  test_error_extraction.rs  test_format_stream_isolation.rs  test_local_source.rs  test_lockfile_integrity.rs  test_log_retention.rs  test_nested_dofiles.rs  test_review_regression.rs  test_schema_conformance.rs  test_signal_handling.rs  test_stata_output.rs  test_stata_wrappers.rs  test_timeout.rs  update_check.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  main.rs  schema.rs
(+149 files in other folders)
