[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
description = "Development tasks for stacy"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration parsing
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Error handling
anyhow = "1.0"

# File system
walkdir = "2.4"

# Template rendering
minijinja = "2.0"

# Diff for verification
similar = "2.4"
